correção de html

--- a/index.html
+++ b/index.html
@@ -1,28 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <title>Respostas dos exercícios de HTML</title>
-    </head>
-    <body>
-        <section>
-            <h1>Atividade 1</h1>
-            <p>Elabore a seguinte estrutura de lista, utilizando apenas HTML</p>
-            <ol>
-                <li>HTML
-                    <ol start="3">
-                        <li><mark><strong>Elementos</strong></mark>
-                            <ul>
-                            <li>Sintaxe</li>
-                            <li>Semântica</li>
-                            </ul>
-                        </li>
-                        <li><mark><em>Atributos</em></mark></li>
-                    </ol>
-                </li>
-                <li>CSS</li>
-                <li>Javascript</li>
-            </ol>
-        </section>
-
-</html>
+<h1>Olá, eu sou um html</h1>
