inserção de pagina html

--- a/error_404.html
+++ b/error_404.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,20 +6,12 @@
     <meta name="viewport" content="width=div, initial-scale=1.0">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>Index</title>
+    <title>Erro</title>
 </head>
 <body>
     <div class="container-fluid">
-        <h1>Olá, eu sou um html</h1>
-
-        <ul>
-            <li>
-                <a href="/imagem/Shanks.png">Shanks</a>
-            </li>
-            <li>
-                <a href="/.png">Barba Negra</a>
-            </li>
-        </ul>
+        <h1>Erro 404!</h1>
+        <p>Arquivo não encontrado!</p>
     </div>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
